misaligned field fixed

--- a/app/assets/stylesheets/app/controller.css
+++ b/app/assets/stylesheets/app/controller.css
@@ -41,7 +41,7 @@
 .animals #accommodation_selected #accommodation_search_link{}
 
 /* Status History */
-.animals #status_history_container{}
+.animals #status_history_container{margin-left:-12px;}
 .animals .animal_status_id_field{}
 .animals .status_history_section{display:none;}
 .animals .status_history_date_field{display:none;}
